--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,29 @@
+body {
+  background: #3d35a4;
+}
+
+a {
+  text-decoration: none;
+}
+
+h1 {
+  text-align: center;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 4rem;
+  color: #52dadaf1;
+  text-shadow: 2px -10px 7px #152020;
+}
+
+h2 {
+  text-align: center;
+  text-decoration: none !important;
+  font-family: 'Montserrat Subrayada', sans-serif;
+}
+
 /* ACUEIL */
 #accueil {
   /* Ex Body */
-  background-color: #ffffff;
+  /* background-color: rgb(46, 41, 125); */
   font-family: "Yanone Kaffeesatz", sans-serif;
   /* PAGE TITLE */
   /**/
@@ -38,14 +60,6 @@
           margin-block-start: 0;
   -webkit-margin-after: 0;
           margin-block-end: 0;
-}
-
-#accueil h1 {
-  text-align: center;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  font-size: 4rem;
-  color: #52dadaf1;
-  text-shadow: 2px -10px 7px #152020;
 }
 
 #accueil nav {
@@ -405,15 +419,132 @@
 /*  */
 /* FORMULAIRE */
 #formulaire {
-  background-color: #202087;
+  /* background-color: rgb(32, 32, 135); */
+  color: white;
+  /* #footerprofil{
+        display:flex;
+        flex-direction:row;
+    } */
+  /* .labeli{
+        margin-left:0px;
+    } */
   /* RESPONSIVE */
+  /* @media screen and (max-width:1216px){
+                    
+                #colonne1fiche{
+                    width:90%;
+                }
+                
+                #colonne2fiche{
+                    width:90%;
+                }
+                
+                    
+                .widget{
+                    width:70%;
+                }
+                
+                .widget2{
+                    width:80%;
+                }
+                
+                .widget4{
+                    display:flex;
+                    margin:10px auto 10px auto;
+                }
+                
+                #colonnesfiche{
+                    display:flex;
+                }
+                
+                .contenu{
+                    width:90%;
+                }
+                .colonneprofil{
+                    width:30%;
+                }
+                
+        }
+
+        @media screen and (max-width:850px){
+                .widget{
+                    width:80%;
+                }
+                
+                .widget2{
+                    width:80%;
+                }
+                
+                .widget4{
+                    display:flex;
+                    margin:10px auto 10px auto;
+                }
+                
+                #colonnesfiche{
+                    display:flex;
+                flex-direction: column;
+                }
+                
+                .contenu{
+                    width:90%;
+                }
+                
+                #labelcv{
+                    margin:0 0 0 0;
+                }
+                
+        }
+
+        @media screen and (max-width:550px){
+
+            .widget{
+                width:70%;
+            }
+            
+            .widget2{
+                width:100%;
+            }
+            
+            .widget4{
+                display:flex;
+                margin:10px auto 10px auto;
+            }
+            
+            .special1{
+                width:20%;
+            }
+            .special2{
+                width:20%;
+            }
+            
+            #colonnesfiche{
+                display:flex;
+            flex-direction: column;
+            }
+            
+            .contenu{
+                width:80%;
+            }
+            #footerprofil{
+                display:flex;
+            flex-direction: column;
+            }
+            .colonneprofil{
+                width:70%;
+            }
+        } */
   /*  */
   /* RETURN BUTTON */
   /*  */
 }
 
 #formulaire input {
-  border-radius: 10px;
+  border-radius: 10px !important;
+  border: none;
+}
+
+#formulaire input:focus {
+  border-color: #000000 !important;
 }
 
 #formulaire #age {
@@ -422,46 +553,14 @@
   display: flex;
 }
 
-#formulaire h1 {
-  text-align: center;
-  font-family: 'Montserrat Subrayada', sans-serif;
-  font-size: 4rem;
-  color: #52dadaf1;
-  text-shadow: 2px -10px 7px #152020;
-}
-
-#formulaire h2 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  font-family: 'Montserrat Subrayada', sans-serif;
-}
-
-#formulaire #footerprofil {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
-
 #formulaire label {
-  margin-left: 60px;
-  margin-bottom: 1px;
-}
-
-#formulaire .labeli {
-  margin-left: 0px;
+  /* margin-left: 60px; 
+        margin-bottom: 1px; */
+  font-size: 20px;
 }
 
 #formulaire .special1 {
-  width: 150px;
-  margin-left: 60px;
+  width: 20%;
   margin-bottom: 20px;
   margin-top: 20px;
   background-color: #e8eeef;
@@ -473,7 +572,7 @@
 }
 
 #formulaire .special2 {
-  width: 50px;
+  width: 55px;
   margin-left: 60px;
   margin-bottom: 20px;
   margin-top: 20px;
@@ -498,22 +597,38 @@
 }
 
 #formulaire hr {
-  width: 50%;
+  width: 80%;
   margin-top: 50px;
   margin-bottom: 50px;
 }
 
 #formulaire .widget {
-  border: solid 1px #E5E5E5;
+  border: none;
   padding: 9px;
   display: block;
   font-size: 16px;
   background: #FFFFFF;
-  background: -moz-linear-gradient(top, #FFFFFF, #EEEEEE 1px, #FFFFFF 25px);
-  margin-left: 60px;
-  width: 450px;
+  /* background: 
+            -webkit-gradient(
+                linear, 
+                left top, 
+                left 25, 
+                from(#FFFFFF), 
+                color-stop(4%, #EEEEEE), 
+                to(#FFFFFF)
+            );
+        background: 
+            -moz-linear-gradient(
+                top, 
+                #FFFFFF,
+                #EEEEEE 1px, 
+                #FFFFFF 25px
+                ); */
+  /* margin-left: 60px; */
+  width: 100%;
   margin-bottom: 20px;
   margin-top: 20px;
+  margin-right: 0px;
 }
 
 #formulaire .widget2 {
@@ -523,10 +638,10 @@
   font-size: 16px;
   background: #FFFFFF;
   background: -moz-linear-gradient(top, #FFFFFF, #EEEEEE 1px, #FFFFFF 25px);
-  width: 300px;
+  width: 100%;
   margin-bottom: 20px;
   margin-top: 20px;
-  margin-left: 60px;
+  margin-right: 0px;
 }
 
 #formulaire .widget3 {
@@ -537,19 +652,11 @@
   font-size: 16px;
   background: #FFFFFF;
   background: -moz-linear-gradient(top, #FFFFFF, #EEEEEE 1px, #FFFFFF 25px);
+  width: 100%;
 }
 
 #formulaire .widget4 {
-  margin: 10px auto 10px auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  display: block;
   font-family: 'Yanone Kaffeesatz', sans-serif;
   border-radius: 5px;
   border: unset;
@@ -589,7 +696,7 @@
   color: black;
   border-radius: 10px;
   height: 40px;
-  width: 300px;
+  width: 330px;
   font-family: 'Yanone Kaffeesatz', sans-serif;
   font-weight: bolder;
   border: unset;
@@ -608,113 +715,6 @@
 
 #formulaire input[type=button] {
   height: 100px;
-}
-
-@media screen and (max-width: 1216px) {
-  #formulaire #colonne1fiche {
-    width: 90%;
-  }
-  #formulaire #colonne2fiche {
-    width: 90%;
-  }
-  #formulaire .widget {
-    width: 70%;
-  }
-  #formulaire .widget2 {
-    width: 80%;
-  }
-  #formulaire .widget4 {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin: 10px auto 10px auto;
-  }
-  #formulaire #colonnesfiche {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-  #formulaire .contenu {
-    width: 90%;
-  }
-  #formulaire .colonneprofil {
-    width: 30%;
-  }
-}
-
-@media screen and (max-width: 850px) {
-  #formulaire .widget {
-    width: 80%;
-  }
-  #formulaire .widget2 {
-    width: 80%;
-  }
-  #formulaire .widget4 {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin: 10px auto 10px auto;
-  }
-  #formulaire #colonnesfiche {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  #formulaire .contenu {
-    width: 90%;
-  }
-  #formulaire #labelcv {
-    margin: 0 0 0 0;
-  }
-}
-
-@media screen and (max-width: 550px) {
-  #formulaire .widget {
-    width: 70%;
-  }
-  #formulaire .widget2 {
-    width: 100%;
-  }
-  #formulaire .widget4 {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin: 10px auto 10px auto;
-  }
-  #formulaire .special1 {
-    width: 20%;
-  }
-  #formulaire .special2 {
-    width: 20%;
-  }
-  #formulaire #colonnesfiche {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  #formulaire .contenu {
-    width: 80%;
-  }
-  #formulaire #footerprofil {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  #formulaire .colonneprofil {
-    width: 70%;
-  }
 }
 
 #formulaire #retour {
